fix spacing of nested lists

--- a/css/base.css
+++ b/css/base.css
@@ -117,6 +117,10 @@ ol > ul {
   margin-left: var(--spacing-medium);
 }
 
+ol li, ul li {
+  margin-top:  var(--spacing-small);
+}
+
 @media only screen and (max-width: 960px) {
   .wrapper {
     padding-left: var(--spacing-large) !important;
